// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdnyYQ sc-gtsseb hedbFl iTnRyk"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdnyYQ sc-gtsseb krRMKq iTnRyk"
>
  foo
</button>
`;
